--- a/public/login.html
+++ b/public/login.html
@@ -19,10 +19,9 @@
       <button type="submit">Entrar</button>
     </form>
 
-    <p>Não tem conta? <a href="cadastro.html">Cadastre-se</a></p>
+    <p>Não tem conta? <a href="./cadastro.html">Cadastre-se</a></p>
   </main>
 
-  <script src="js/login.js"></script>
+  <script src="./js/login.js"></script>
 </body>
 </html>
-
