--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -21,9 +21,8 @@
 
       <button type="submit">Cadastrar</button>
     </form>
-    <p>Já tem conta? <a href="index.html">Faça login</a></p>
+    <p>Já tem conta? <a href="./index.html">Faça login</a></p>
   </main>
-  <script src="js/cadastro.js"></script>
+  <script src="./js/cadastro.js"></script>
 </body>
 </html>
-
